feat: last config with all features

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -6,5 +6,6 @@
 osd-level=3
 osd-status-msg='Frame: ${estimated-frame-number}   Time: ${time-pos}'
 osd-duration=3600
-
-
+# prevent from auto exit
+idle=yes
+keep-open=yes
