--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -10,6 +10,12 @@ Ctrl+SHIFT+LEFT  seek -0.1 exact      # backward 10 frames
 + add video-zoom 0.1
 - add video-zoom -0.1
 0 set video-zoom 0     # reset zoom
+Ctrl+WHEEL_UP add video-zoom 0.1
+Ctrl+WHEEL_DOWN add video-zoom -0.1
+### Ctrl + wheel to zoom around the cursor
+# Ctrl+WHEEL_UP   script-binding positioning/cursor-centric-zoom-in
+# Ctrl+WHEEL_DOWN script-binding positioning/cursor-centric-zoom-out
+
 
 # Pan controls
 DOWN    add video-pan-y -0.01
@@ -17,3 +23,5 @@ UP  add video-pan-y  0.01
 RIGHT  add video-pan-x -0.01
 LEFT add video-pan-x  0.01
 
+# MBTN_LEFT script-binding positioning/drag-to-pan
+Ctrl+MBTN_LEFT script-binding drag-to-pan
