feat: last config of flatpak mpv version 4

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -16,12 +16,11 @@ Ctrl+WHEEL_DOWN add video-zoom -0.1
 # Ctrl+WHEEL_UP   script-binding positioning/cursor-centric-zoom-in
 # Ctrl+WHEEL_DOWN script-binding positioning/cursor-centric-zoom-out
 
+# show path when clikcing p
+p show-text "${path}"
 
 # Pan controls
 DOWN    add video-pan-y -0.01
 UP  add video-pan-y  0.01
 RIGHT  add video-pan-x -0.01
 LEFT add video-pan-x  0.01
-
-# MBTN_LEFT script-binding positioning/drag-to-pan
-Ctrl+MBTN_LEFT script-binding drag-to-pan
