--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,3 +1,4 @@
+# MPV configuration file
 # osd-status-msg='Time: ${time-pos}  Frame: ${estimated-frame-number}'
 # Force 100fps playback interpretation
 #video-fps=100
